# BLE_Gateway_Firmware

./: .gitignore  CMakeLists.txt  Jenkinsfile  Kconfig  README.md  ble_gateway_firmware.code-workspace  prj.conf  west.yml
app/: CMakeLists.txt  Kconfig  Kconfig.ble  Kconfig.lairdconnect_battery  Kconfig.single_peripheral  Kconfig.wdt  overlay_lwm2m_dtls.conf  overlay_lwm2m_pinnacle_100.conf  overlay_memfault.conf  prj.conf
app/attributes/: Generate.bat  Kconfig.attribute  attribute_generator.py  attributes.json  log_wrapper.py  renumber.py  requirements.txt  sentrius_methods.json
app/bl654_sensor/: Kconfig
app/bl654_sensor/include/: bl654_sensor.h  ble_sensor_service.h
app/bl654_sensor/source/: bl654_sensor.c
app/bluegrass/: CMakeLists.txt
app/bluegrass/include/: aws.h  aws_json.h  bluegrass.h  bluegrass_json.h  sensor_cmd.h  sensor_gateway_parser.h  sensor_log.h  sensor_table.h  sensor_task.h  shadow_builder.h  to_string.h
app/bluegrass/source/: aws.c  bluegrass.c  fota_parser.c  mg100_shadow_parser.c  sensor_adv_format.c  sensor_gateway_parser.c  sensor_log.c  sensor_shadow_parser.c  sensor_table.c  sensor_task.c  shadow_builder.c  to_string.c
app/boards/: bl5340_dvk_cpuapp.conf  bl5340_dvk_cpunet.conf  bl5340pa_dvk_cpuapp.conf  mg100.conf  pinnacle_100.overlay  pinnacle_100_dvk.conf  pinnacle_100_dvk.overlay  pm_static_bl5340_dvk.yml
app/child_image/: hci_rpmsg.conf
app/coap/: CMakeLists.txt  Kconfig
app/coap/include/: coap_fota.h  coap_fota_query.h  coap_fota_shadow.h
app/coap/source/: coap_fota.c  coap_fota_json_parser.c  coap_fota_shadow.c  coap_fota_task.c
app/common/: CMakeLists.txt  Kconfig  Kconfig.app_update  Kconfig.aws  Kconfig.ble  Kconfig.button  Kconfig.fota_smp  Kconfig.gateway_common  Kconfig.http_file_download  Kconfig.jsmn  Kconfig.lairdconnect_battery  Kconfig.lcz_certs  Kconfig.lcz_motion  Kconfig.lcz_motion_temperature  Kconfig.lcz_mqtt  Kconfig.lte  Kconfig.shadow_parser  Kconfig.single_peripheral  Kconfig.sntp  Kconfig.wdt
app/common/include/: app_update.h  app_version.h  aws.h  aws_json.h  ble.h  button.h  button_sw1.h  cloud.h  control_task.h  ethernet_network.h  fota_smp.h  gateway_common.h  gateway_fsm.h  http_file_download.h  jsmn_json.h  lairdconnect_battery.h  lcz_certs.h  lcz_motion.h  lcz_mqtt.h  led_configuration.h  lte.h  rand_range.h  sdcard_log.h  shadow_parser.h  shadow_parser_flags_aws.h  single_peripheral.h  sntp_qrtc.h
app/common/src/: app_update.c  aws.c  ble.c  button.c  button_sw1.c  control_task.c  ethernet_network.c  fota_smp.c  gateway_common.c  gateway_fsm.c  http_file_download.c  jsmn_json.c  lairdconnect_battery.c  lcz_certs.c  lcz_modem_shell.c  lcz_motion.c  lcz_motion_temperature.c  lcz_mqtt.c  lcz_sntp_shell.c  lte.c  main.c  sdcard_log.c  shadow_parser.c  shadow_parser_flags_aws.c  single_peripheral.c  sntp_qrtc.c  wdt.c
app/contact_tracing/: CMakeLists.txt  Kconfig  overlay_ct.conf
app/contact_tracing/include/: ct_app.h  ct_ble.h  ct_datalog.h  ct_fs_intercept.h  ct_wdt.h  dfu_smp_c.h  lcz_fs_mgmt_intercept.h  rpc_params.h
app/contact_tracing/src/: ct_app.c  ct_ble.c  ct_fs_intercept.c  ct_shell.c  ct_wdt.c  dfu_smp_c.c  lcz_fs_mgmt_intercept.c  rpc_params.c
app/display/: CMakeLists.txt
app/display/include/: lcd.h
app/display/src/: bl5340_module.c  bl5340pa_module_ext.c  bl5340pa_module_int.c  lcd.c
app/ess_sensor/: CMakeLists.txt  Kconfig
app/ess_sensor/include/: ess_sensor.h
app/ess_sensor/source/: ess_sensor.c
app/framework_config/: FrameworkIds.h  FrameworkIncludes.h  FrameworkMsgCodes.h  FrameworkMsgConfiguration.h  FrameworkMsgTypes.h
app/http_fota/: CMakeLists.txt  Kconfig
app/http_fota/include/: fota_root_ca  hl7800_http_fota.h  http_fota_shadow.h  http_fota_task.h
app/http_fota/source/: hl7800_http_fota.c  http_fota_shadow.c  http_fota_task.c
app/include/: app_version.h  aws.h  ble.h  ble_aws_service.h  ble_motion_service.h  ble_sensor_service.h  jsmn_json.h  lairdconnect_battery.h  led_configuration.h  lte.h  nv.h  sdcard_log.h  sensor_state.h  wdt.h
app/lwm2m/: CMakeLists.txt  Kconfig
app/lwm2m/include/: lcz_lwm2m_battery.h  lcz_lwm2m_client.h  lcz_lwm2m_conn_mon.h  (+4 more)
app/memfault/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h  memfault_trace_reason_user_config.def
app/src/: aws.c  aws_config.c  ble.c  ble_aws_service.c  ble_battery_service.c  ble_motion_service.c  ble_sensor_service.c  button.c  jsmn_json.c  lairdconnect_battery.c  lcz_modem_shell.c  lte.c  main.c  nv.c  sdcard_log.c  sensor_state.c  single_peripheral.c  wdt.c
app/version/: app_version.conf.in  app_version.h  app_version.h.in
mg100/: CMakeLists.txt  Kconfig  overlay_lwm2m_dtls.conf  prj.conf
mg100/framework_config/: FrameworkIds.h  FrameworkIncludes.h  FrameworkMsgCodes.h  FrameworkMsgConfiguration.h  FrameworkMsgTypes.h
mg100/include/: AdFind.h  SensorBt510.h  SensorGatewayParser.h  SensorTask.h  ShadowBuilder.h  ToString.h  ad_find.h  app_version.h  aws.h  battery.h  ble_aws_service.h  ble_battery_service.h  ble_bootloader_service.h  ble_cellular_service.h  ble_motion_service.h  ble_power_service.h  ble_sensor_service.h  bootloader.h  bt510_flags.h  bt_scan.h  dis.h  dns.h  hexcode.h  laird_bluetooth.h  laird_utility_macros.h  led.h  led_configuration.h  lte.h  mg100_ble.h  mg100_common.h  nv.h  power.h  qrtc.h  sdcard_log.h  sensor_adv_format.h  sensor_bt510.h  sensor_cmd.h  sensor_event.h  sensor_gateway_parser.h  sensor_log.h  (+6 more)
mg100/src/: AdFind.c  SensorBt510.c  SensorGatewayParser.c  SensorTask.c  ShadowBuilder.c  ToString.c  ad_find.c  aws.c  battery_task.c  ble_aws_service.c  ble_battery_service.c  ble_bootloader_service.c  ble_cellular_service.c  ble_motion_service.c  ble_power_service.c  ble_sensor_service.c  bootloader.c  bt_scan.c  custom_fatal_error_handler.c  dis.c  dns.c  hexcode.c  jsmn_share.c  laird_bluetooth.c  lairdconnect_battery.c  led.c  lte.c  main.c  mg100_ble.c  mg100_common.c  nv.c  power.c  qrtc.c  sdcard_log.c  sensor_adv_format.c  sensor_bt510.c  sensor_cmd.c  sensor_gateway_parser.c  sensor_log.c  sensor_table.c  (+5 more)
(+112 files in other folders)
